<resources>
    <string name="app_name">MyProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ajit Shukla</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mark_attendance">Mark Attendance</string>
    <string name="upload_topics">Upload Topics</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_events">My Events</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_email_or_phone_number">\tenter email or phone number</string>
    <string name="enter_password">\tenter password</string>
    <string name="log_in">Log in</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_details">About the event, What the event is and who is coordinating it....</string>
</resources>
