<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/back27"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_image"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"/>
            <EditText
                android:paddingStart="10dp"
                android:drawableStart="@drawable/user"
                android:layout_margin="15dp"
                android:hint="@string/enter_email_or_phone_number"
                android:background="@drawable/background"
                android:layout_width="280dp"
                android:layout_height="60dp"
                />
            <EditText
                android:hint="@string/enter_password"
                android:inputType="number"
                android:drawableStart="@drawable/password"
                android:paddingStart="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/background"
                android:layout_width="280dp"
                android:layout_height="60dp"
                />
            <Button
                android:id="@+id/logInButton"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:background="@null"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="openActivity2"
                android:textStyle="bold"
                android:textColor="#034B45"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </RelativeLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>